Begin teletext for the C64. Refactor BBC code to accomodate

--- a/apps/c64/Makefile
+++ b/apps/c64/Makefile
@@ -12,7 +12,9 @@ clean:
 C64SRC = \
 	kernal.asm \
 	loader.asm \
-	main.asm
+	main.asm \
+	charset.asm \
+	teletext.asm
 
 $(DEPART): $(C64SRC) $(COMMON6502)
 	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i main.asm
