Begin implementing screen refresh

--- a/apps/c64/Makefile
+++ b/apps/c64/Makefile
@@ -4,31 +4,31 @@
 
 LOADER=loader
 DEPART=depart
+TELETEXT=teletext
 DISK=$(BUILDS)/depart.d64
 
 all: $(DISK)
 
 clean:
-	$(RM) $(LOADER) $(DEPART) $(DISK)
+	$(RM) $(LOADER) $(DEPART) $(TELETEXT) $(DISK)
 
-C64SRC = \
+C64SRC = main.asm \
 	kernal.asm \
-	loader.asm \
-	main.asm \
-	charset.asm \
-	teletext.asm
+	loader.asm
+
+TELETEXTSRC = teletext.asm charset.asm
 
 $(LOADER): splash.asm
-	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i splash.asm
+	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
+
+$(TELETEXT): $(TELETEXTSRC)
+	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
 
 $(DEPART): $(C64SRC) $(COMMON6502)
-	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i main.asm
-
-#$(BUILDS)/$(DEPART): $(DEPART)
-#	cp $(DEPART) $(BUILDS)/$(DEPART)
+	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
 
 # Build the disk image, files ordered so first file gets loaded first!
-$(DISK): $(LOADER) $(DEPART)
+$(DISK): $(LOADER) $(TELETEXT) $(DEPART)
 	$(RM) $@
 	c1541 -format departure,8 d64 $@
 	$(foreach file, $^, c1541 -attach $@ -write $(file);)
