--- a/apps/c64/Makefile
+++ b/apps/c64/Makefile
@@ -3,9 +3,9 @@
 # ======================================================================
 
 LOADER		= loader
-BANNER		= banner
 BOOTSTRAP	= bootstrap
 DEPART		= depart
+SPLASH		= splash
 TELETEXT	= teletext
 TESTCARD	= testcard
 DISK		= $(BUILDS)/depart.d64
@@ -13,7 +13,7 @@ DISK		= $(BUILDS)/depart.d64
 all: $(DISK)
 
 clean:
-	$(RM) $(LOADER) $(BOOTSTRAP) $(DEPART) $(TELETEXT) $(TESTCARD) $(BANNER) $(DISK)
+	$(RM) $(LOADER) $(BOOTSTRAP) $(DEPART) $(SPLASH) $(TELETEXT) $(TESTCARD) $(DISK)
 
 C64SRC = main.asm \
 	kernal.asm \
@@ -31,11 +31,11 @@ $(BOOTSTRAP): bootstrap.asm
 	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
 
 # SPLASH - the splash screen
-$(TESTCARD): testcard.asm
+$(SPLASH): splash.asm
 	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
 
-# SPLASH - the splash screen
-$(BANNER): banner.asm
+# TESTCARD - Debugging Teletext test card
+$(TESTCARD): testcard.asm
 	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
 
 # TELETEXT - the teletext emulator
@@ -48,7 +48,7 @@ $(DEPART): $(C64SRC) $(COMMON6502)
 
 # Build the disk image
 # $(LOADER) needs to be the first entry for LOAD "*",8,1 to work when booting the disk.
-$(DISK): $(LOADER) $(BOOTSTRAP) $(TELETEXT) $(TESTCARD) $(BANNER) $(DEPART)
+$(DISK): $(LOADER) $(BOOTSTRAP) $(TELETEXT) $(TESTCARD) $(SPLASH) $(DEPART)
 	$(RM) $@
 	c1541 -format ukdepartures,8 d64 $@
 	$(foreach file, $^, c1541 -attach $@ -write $(file);)
