Split networking into its own module

--- a/apps/c64/Makefile
+++ b/apps/c64/Makefile
@@ -5,6 +5,7 @@
 LOADER		= loader
 BOOTSTRAP	= bootstrap
 DEPART		= depart
+NETWORK		= network
 SPLASH		= splash
 TELETEXT	= teletext
 TESTCARD	= testcard
@@ -13,7 +14,7 @@ DISK		= $(BUILDS)/depart.d64
 all: $(DISK)
 
 clean:
-	$(RM) $(LOADER) $(BOOTSTRAP) $(DEPART) $(SPLASH) $(TELETEXT) $(TESTCARD) $(DISK)
+	$(RM) $(BOOTSTRAP) $(DEPART) $(LOADER) $(NETWORK) $(SPLASH) $(TELETEXT) $(TESTCARD) $(DISK)
 
 C64SRC = main.asm \
 	kernal.asm \
@@ -22,12 +23,16 @@ C64SRC = main.asm \
 
 TELETEXTSRC = teletext.asm charset.asm
 
+# BOOTSTRAP - the application bootstrap
+$(BOOTSTRAP): bootstrap.asm
+	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
+
 # LOADER - the disk bootstrap
 $(LOADER): diskloader.asm basictokens.asm
 	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
 
-# BOOTSTRAP - the application bootstrap
-$(BOOTSTRAP): bootstrap.asm
+# LOADER - the disk bootstrap
+$(NETWORK): network.asm ../network/api.asm ../network/dialer.asm ../network/serial.asm
 	$(BEEBASM) -w -D bbc=0 -D bbcmaster=0 -D c64=1 -i $<
 
 # SPLASH - the splash screen
@@ -48,7 +53,7 @@ $(DEPART): $(C64SRC) $(COMMON6502)
 
 # Build the disk image
 # $(LOADER) needs to be the first entry for LOAD "*",8,1 to work when booting the disk.
-$(DISK): $(LOADER) $(BOOTSTRAP) $(TELETEXT) $(TESTCARD) $(SPLASH) $(DEPART)
+$(DISK): $(LOADER) $(BOOTSTRAP) $(TELETEXT) $(TESTCARD) $(SPLASH) $(NETWORK) $(DEPART)
 	$(RM) $@
 	c1541 -format ukdepartures,8 d64 $@
 	$(foreach file, $^, c1541 -attach $@ -write $(file);)
