Refactor Makefiles & move network & teletext modules into own directories

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -7,10 +7,15 @@
 export DISKTOOL = $(shell pwd)/../bin/disktool
 
 all:
+	$(MKDIR) $(BUILD_C64) $(BUILDS_BBC)
+	@$(MAKE) -C teletext all
+	@$(MAKE) -C network all
 	@$(MAKE) -C c64 all
 	@$(MAKE) -C bbc all
 
 clean:
+	@$(MAKE) -C teletext clean
+	@$(MAKE) -C network clean
 	@$(MAKE) -C c64 clean
 	@$(MAKE) -C bbc clean
 
