Refactor main app base

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -13,4 +13,4 @@
 # Files will be written to the image in the supplied order
 %.d64:
 	@$(C1541) -format $(shell basename $@),8 d64 $@
-	@$(foreach file, $^, $(C1541) -attach $@ -write $(file) $(shell basename $(file) .prg);)
+	@$(foreach file, $^, $(C1541) -attach $@ -write $(file) $(shell basename $(file) .prg|cut -f1 -d'_');)
