--- a/apps/c64/Makefile
+++ b/apps/c64/Makefile
@@ -5,22 +5,19 @@
 
 LOADER		= loader.prg
 BOOTSTRAP	= bootstrap.prg
-DEPART		= depart.prg
+BOARDS		= $(BUILDS_C64)/boards_c64.prg
 DISK		= $(BUILDS)/depart.d64
 
 all: $(DISK)
 
 clean:
-	$(RM) $(BOOTSTRAP) $(DEPART) $(LOADER) $(NETWORK) $(DISK)
+	$(RM) $(BOOTSTRAP) $(LOADER) $(NETWORK) $(DISK)
 
 # BOOTSTRAP - the application bootstrap
 $(BOOTSTRAP): bootstrap.asm kernal.asm
 
 # LOADER - the disk bootstrap
 $(LOADER): loader.asm basictokens.asm
-
-# DEPART - the main application
-$(DEPART): depart.asm kernal.asm
 
 # Build the disk image
 # $(LOADER) needs to be the first entry for LOAD "*",8,1 to work when booting the disk.
@@ -30,4 +27,4 @@ $(DISK): $(LOADER) \
 		$(BUILDS_C64)/testcard.prg \
 		$(BUILDS_C64)/splash.prg \
 		$(BUILDS_C64)/network.prg \
-		$(DEPART)
+		$(BOARDS)
