--- a/network/Makefile
+++ b/network/Makefile
@@ -1,7 +1,7 @@
 # ======================================================================
 # Networking
 # ======================================================================
-	include ../../Makefile.inc
+	include ../Makefile.inc
 
 NETWORK_C64	= network.prg
 
