Initial support for Spectrum

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -14,3 +14,7 @@
 %.d64:
 	@$(C1541) -format $(shell basename $@),8 d64 $@
 	@$(foreach file, $^, $(C1541) -attach $@ -write $(file) $(shell basename $(file) .prg|cut -f1 -d'_');)
+
+# Spectrum TAP tape format
+%.tap: %.z80
+	$(ZASM) $<
