--- a/spectrum/Makefile
+++ b/spectrum/Makefile
@@ -1,15 +1,40 @@
 # ======================================================================
-# Sinclair ZX Spectrum +3
-#
-# The +2 & 128 may be supported later, I only have a +3 physically here.
+# Sinclair ZX Spectrum
 # ======================================================================
 	include ../Makefile.inc
 
 BOARDS	= boards.z80
 
-all: spectape.tap teletext.tap
+.PHONY: all network main
+all: splash network main departures
 
 clean:
-	$(RM) *.lst *.tap
+	@$(MAKE) -C main clean
+	@$(MAKE) -C network clean
+	$(RM) *.lst *.rom *.tzx *.dsk
 
-teletext.tap: teletext.z80 main.z80 screen.z80 charset1.z80
+main:
+	@$(MAKE) -C main all
+
+network:
+	@$(MAKE) -C network all
+
+splash: splash-tzx.tzx
+
+splash.rom: splash.z80
+
+manifest.rom: manifest.z80
+
+departures: network splash.rom manifest.rom main
+	cp ../teletextspectrum/teletext.dsk departures.dsk
+	specfile -dsk departures.dsk manifest.rom 0x6200 splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
+
+#departures.tzx: network-tzx.tzx splash-tzx.tzx
+#	cat ../teletextspectrum/loader-tzx.tzx ../teletextspectrum/teletext-tzx.tzx splash-tzx.tzx network-tzx.tzx >departures.tzx
+
+#departures.tzx: network #../teletextspectrum/loader-tzx.tzx ../teletextspectrum/teletext-tzx.tzx splash-tzx.tzx network/network-tzx.tzx
+#	cat ../teletextspectrum/loader-tzx.tzx ../teletextspectrum/teletext-tzx.tzx splash-tzx.tzx network/network-tzx.tzx >$@
+#	cat $^ >$@
+
+#departures.dsk: departures.tzx splash.rom manifest.rom
+
