Update Makefile to build both tape & disk spectrum builds

--- a/spectrum/Makefile
+++ b/spectrum/Makefile
@@ -11,7 +11,7 @@ all: splash network main departures
 clean:
 	@$(MAKE) -C main clean
 	@$(MAKE) -C network clean
-	$(RM) *.lst *.rom *.tzx *.dsk
+	$(RM) *.lst *.rom *.tzx *.tap *.dsk
 
 main:
 	@$(MAKE) -C main all
@@ -28,16 +28,8 @@ manifest.rom: manifest.z80
 departures: network splash.rom manifest.rom main
 	cp ../teletextspectrum/teletext.dsk departures.dsk
 	specfile -dsk departures.dsk manifest.rom 0x6200 splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
-	specfile -tzx departures1.tzx -tap departures1.tap splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
-	cat ../teletextspectrum/tape/loader-tzx.tzx ../teletextspectrum/teletext-tzx.tzx departures1.tzx >departures.tzx
-	#cat ../teletextspectrum/tape/loader-tap.tap ../teletextspectrum/teletext-tap.tap departures1.tap >departures.tap
-
-#departures.tzx: network-tzx.tzx splash-tzx.tzx
-#	cat ../teletextspectrum/loader-tzx.tzx ../teletextspectrum/teletext-tzx.tzx splash-tzx.tzx network-tzx.tzx >departures.tzx
-
-#departures.tzx: network #../teletextspectrum/loader-tzx.tzx ../teletextspectrum/teletext-tzx.tzx splash-tzx.tzx network/network-tzx.tzx
-#	cat ../teletextspectrum/loader-tzx.tzx ../teletextspectrum/teletext-tzx.tzx splash-tzx.tzx network/network-tzx.tzx >$@
-#	cat $^ >$@
-
-#departures.dsk: departures.tzx splash.rom manifest.rom
-
+	specfile -tzx departures.tzx -tap departures.tap splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
+	cat ../teletextspectrum/teletext.tzx departures.tzx >departures1.tzx
+	mv departures1.tzx departures.tzx
+	cat ../teletextspectrum/teletext.tap departures.tap >departures1.tap
+	mv departures1.tap departures.tap
