--- a/spectrum/Makefile
+++ b/spectrum/Makefile
@@ -4,14 +4,20 @@
 	include ../Makefile.inc
 
 BOARDS	= boards.z80
+TAP		= $(BUILDS_SPECTRUM)/depart.tap
+TZX		= $(BUILDS_SPECTRUM)/depart.tzx
+DSK		= $(BUILDS_SPECTRUM)/depart.dsk
+
+# Path to the teletext emulator for the spectrum
+TELETEXT_BASE = ../teletextspectrum
 
 .PHONY: all network main
-all: splash network main departures
+all: $(DSK) $(TAP) $(TZX)
 
 clean:
 	@$(MAKE) -C main clean
 	@$(MAKE) -C network clean
-	$(RM) *.lst *.rom *.tzx *.tap *.dsk
+	@$(RM) *.lst *.rom *.tzx *.tap *.dsk
 
 main:
 	@$(MAKE) -C main all
@@ -19,24 +25,18 @@ main:
 network:
 	@$(MAKE) -C network all
 
-splash: splash-tzx.tzx
-
 splash.rom: splash.z80
 
 manifest.rom: manifest.z80
 
-departures: departures.dsk departures.tzx departures.tap
+$(DSK): network splash.rom manifest.rom main
+	@cp $(TELETEXT_BASE)/teletext.dsk $@
+	@specfile -dsk $@ manifest.rom 0x6200 splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
 
-departures.dsk: network splash.rom manifest.rom main
-	cp ../teletextspectrum/teletext.dsk departures.dsk
-	specfile -dsk departures.dsk manifest.rom 0x6200 splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
+$(TZX): network splash.rom main
+	@specfile -tzx departures.tzx splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
+	@cat $(TELETEXT_BASE)/teletext.tzx departures.tzx >$@
 
-departures.tzx: network splash.rom manifest.rom main
-	specfile -tzx departures.tzx splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
-	cat ../teletextspectrum/teletext.tzx departures.tzx >departures1.tzx
-	mv departures1.tzx departures.tzx
-
-departures.tap: network splash.rom manifest.rom main
-	specfile -tap departures.tap splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
-	cat ../teletextspectrum/teletext.tap departures.tap >departures1.tap
-	mv departures1.tap departures.tap
+$(TAP): network splash.rom main
+	@specfile -tap departures.tap splash.rom 0xFB00 network/network.rom 0xF000 main/main.rom 0x7000
+	@cat $(TELETEXT_BASE)/teletext.tap departures.tap >$@
