--- a/spectrum/main/Makefile
+++ b/spectrum/main/Makefile
@@ -8,4 +8,4 @@ all: main.rom
 clean:
 	@$(RM) *.lst *.rom *.tzx
 
-main.rom: main.z80 ui.z80 menu.z80
+main.rom: main.z80 network.z80 ui.z80 menu.z80
