Get networking finally working

--- a/spectrum/network/Makefile
+++ b/spectrum/network/Makefile
@@ -8,4 +8,4 @@ all: network.rom
 clean:
 	@$(RM) *.lst *.rom
 
-network.rom: network.z80 machinetype.z80 if1/*.z80 plus3/*.z80
+network.rom: network.z80 block.z80 machinetype.z80 if1/*.z80 plus3/*.z80
