Start on the departure board display

--- a/spectrum/Makefile
+++ b/spectrum/Makefile
@@ -31,12 +31,12 @@ manifest.rom: manifest.z80
 
 $(DSK): network splash.rom manifest.rom main
 	@cp $(TELETEXT_BASE)/teletext.dsk $@
-	@specfile -dsk $@ manifest.rom 0x6200 splash.rom 0xFB00 network/network.rom 0xEC00 main/main.rom 0x7000
+	@specfile -dsk $@ manifest.rom 0x6200 splash.rom 0xFB00 network/network.rom 0xEC00 main/main.rom 0xe000
 
 $(TZX): network splash.rom main
-	@specfile -tzx departures.tzx splash.rom 0xFB00 network/network.rom 0xEC00 main/main.rom 0x7000
+	@specfile -tzx departures.tzx splash.rom 0xFB00 network/network.rom 0xEC00 main/main.rom 0xe000
 	@cat $(TELETEXT_BASE)/teletext.tzx departures.tzx >$@
 
 $(TAP): network splash.rom main
-	@specfile -tap departures.tap splash.rom 0xFB00 network/network.rom 0xEC00 main/main.rom 0x7000
+	@specfile -tap departures.tap splash.rom 0xFB00 network/network.rom 0xEC00 main/main.rom 0xe000
 	@cat $(TELETEXT_BASE)/teletext.tap departures.tap >$@
